scrollbar bug on Survey Page adjustment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,8 +22,8 @@ body {
   scrollbar-width: thin;
 }
 
-@layer utilities {
-  .scrollbar::-webkit-scrollbar {
-    scrollbar-width: thin;
+@utility scrollbar-hidden {
+  &::-webkit-scrollbar {
+    display: none;
   }
 }
